theme: fix field text misalignment; 404: add htaccess to svnignore

--- a/blender_docs/resources/theme/css/theme_overrides.css
+++ b/blender_docs/resources/theme/css/theme_overrides.css
@@ -293,15 +293,15 @@ a.external {color:#656AE0;}
 	padding: 0px 15px;
 	font-style: normal;
 	margin: 0px;
-  color: #808080;
-  font-size: 90%;
+	color: #808080;
+	font-size: 90%;
 }
 .descr {
 	box-shadow: rgba(0,0,0,0.05) 0px 1px 4px 0px,
 					rgba(211,216,223,0.33) 0px 15px 20px -1px;
 }
 #getting-started .descr {
-  box-shadow: none;
+	box-shadow: none;
 }
 /* End section description. */
 
@@ -351,12 +351,12 @@ a.external {color:#656AE0;}
 /* start version */
 /* Override RTD theme */
 .rst-versions {
-  border-top: 0px;
-  overflow: visible;
+	border-top: 0px;
+	overflow: visible;
 }
 .version-btn.vdeact {
-  cursor: default;
-  color: dimgray;
+	cursor: default;
+	color: dimgray;
 }
 
 .version-btn.vdeact::after {
@@ -487,6 +487,7 @@ a.external {color:#656AE0;}
 	grid-column-start: 2;
 	grid-column-end: 3;
 	margin: 0;
+	line-height: normal;
 }
 .rst-content dl.field-list dd > p {
 	font-size: 90%;
